tests/NormalTests/paczka1/fuzzy1/73799000.err
Error in line 9: UPKNME S727 -1,4
Error in line 13: vb8f S38 141,8
Error in line 11: UPKNME A549 98,1
Error in line 17: S727 S38 92,9
Error in line 32: S727 S727 38,5
